added disc label

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -49,7 +49,7 @@
 \input{shortcuts.tex}
 
 %\title{Conception and Prototypic Implementation of a Storage Solution for Models with Multiple Versions}
-\title{Storage solution for Models with Multiple Versions in \sysbio:\\ Concept and Prototype Implementation}
+\title{Storage Solution for Models with Multiple Versions in \sysbio:\\ Concept and Prototype Implementation}
 \author{Martin Peters\\[24pt]
 	\small Department of Systems Biology and Bioinformatics\\[-3pt]
 	\small University of Rostock}
