--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -982,23 +982,6 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   pmid = {10}
 }
 
-@article{Hussey1976,
-  title = {Editorial: {{Pneumococcal}} Appendicitis and Cecitis},
-  volume = {236},
-  issn = {0098-7484},
-  shorttitle = {Editorial},
-  language = {ENG},
-  timestamp = {2016-10-24T11:18:29Z},
-  number = {12},
-  journal = {JAMA},
-  author = {Hussey, H. H.},
-  month = sep,
-  year = {1976},
-  keywords = {Abscess,Acute Disease,Adult,Appendicitis,Cecal Diseases,Child,Enteritis,Humans,Male,Pneumococcal Infections,Streptococcus pneumoniae,Suppuration},
-  pages = {1388},
-  pmid = {8653}
-}
-
 @article{Makar1975,
   title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
   volume = {13},
@@ -1069,23 +1052,6 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
   pages = {117--126},
   pmid = {1}
-}
-
-@article{Hussey1976a,
-  title = {Editorial: {{Pneumococcal}} Appendicitis and Cecitis},
-  volume = {236},
-  issn = {0098-7484},
-  shorttitle = {Editorial},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:50Z},
-  number = {12},
-  journal = {JAMA},
-  author = {Hussey, H. H.},
-  month = sep,
-  year = {1976},
-  keywords = {Abscess,Acute Disease,Adult,Appendicitis,Cecal Diseases,Child,Enteritis,Humans,Male,Pneumococcal Infections,Streptococcus pneumoniae,Suppuration},
-  pages = {1388},
-  pmid = {8653}
 }
 
 @article{Makar1975c,
@@ -1410,6 +1376,24 @@ number of ontologies which no other reasoner has been able to handle.},
   file = {smh08HermiT.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/J7V8VA9E/smh08HermiT.pdf:application/pdf}
 }
 
+@article{Phillips1958,
+  title = {The {{Relation Between Unemployment}} and the {{Rate}} of {{Change}} of {{Money Wage Rates}} in the {{United Kingdom}}, 1861\textendash{}19571},
+  volume = {25},
+  issn = {1468-0335},
+  doi = {10.1111/j.1468-0335.1958.tb00003.x},
+  language = {en},
+  timestamp = {2016-11-14T20:52:08Z},
+  number = {100},
+  urldate = {2016-11-14},
+  url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1468-0335.1958.tb00003.x/abstract},
+  journal = {Economica},
+  author = {Phillips, A. W.},
+  month = nov,
+  year = {1958},
+  pages = {283--299},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/8C93JRH2/Phillips - 1958 - The Relation Between Unemployment and the Rate of .pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/3MTE4ADW/abstract\;jsessionid=16EB2197548023DE24A82FE2BA94BF0E.html:text/html}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1423,10 +1407,10 @@ ri2011\;Smith2007\;Ashburner2000\;Prinz2011\;Bergmann2014\;Bergmann201
 4a\;COMBINE\;Saake2010\;Lysenko2016\;Tudorica2011\;Teorey1986\;Courtot
 2011\;Finkelstein2004\;Henkel2010\;Henkel2012\;Li2010\;Yu2011\;Bechhof
 er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
-\;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Hussey1976\;Hussey
-1976a\;Spinellis2005a\;OSullivan2009\;Beard2009\;Hucka2003\;Miller2011
-\;Chacon2014\;Cuellar2003\;Bray1998\;Lassila1998\;Carlisle2003\;DeRose
-2010\;Drager2014\;Scharm2014a\;Shearer2008\;;
+\;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Spinellis2005a\;OS
+ullivan2009\;Beard2009\;Hucka2003\;Miller2011\;Chacon2014\;Cuellar2003
+\;Bray1998\;Lassila1998\;Carlisle2003\;DeRose2010\;Drager2014\;Scharm2
+014a\;Shearer2008\;Phillips1958\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
