--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -28,6 +28,7 @@
 
 % TODO command
 \definecolor{magenta}{RGB}{255,0,255}
-\newcommand{\todo}[1]{{\color{red} ((\textbf{TODO}: #1))}\xspace}
-\newcommand{\dw}[1]{\textbf{\color{green} DW: #1}\\}
-\newcommand{\ms}[1]{\textbf{\color{magenta} MS: #1}\\}
+%\newcommand{\todo}[1]{{\color{red} ((\textbf{TODO}: #1))}\xspace}
+\newcommand{\todo}[1]{}
+%\newcommand{\dw}[1]{\textbf{\color{green} DW: #1}\\}
+%\newcommand{\ms}[1]{\textbf{\color{magenta} MS: #1}\\}
