last minute before print: added chaptermark for sysbio repos chapter
Was too long for the header

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -85,6 +85,7 @@
 	\input{background-diff.tex}
 	
 	\chapter{Repositories for Models in \sysbio}
+	\chaptermark{Model Repositories}
 	\input{background-repos.tex}
 	
 	\chapter{Conceptual Architecture}
