--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -120,4 +120,13 @@
 		%\chapter*{Appendix}
 		\input{appendix.tex}
 	\end{appendices}
+	
+	\chapter*{Selbstständigkeitserklärung}
+	Hiermit erkläre ich Martin Peters, dass ich die vorliegende Bachelorarbeit selbständig angefertigt habe. Es wurden nur die in der Arbeit ausdrücklich benannten Quellen und Hilfsmittel benutzt. Wörtlich oder sinngemäß übernommenes Gedankengut habe ich als solches kenntlich gemacht.
+	\\[64pt]
+	\noindent Rostock, 2016-11-15
+	\begin{flushright}
+		$\overline{~~~~~~~~~\mbox{(Unterschrift)}~~~~~~~~~}$
+	\end{flushright}
+
 \end{document}
